# housekeeper-tg-bot

./: .env-example  .gitignore  Makefile  README.md  pyproject.toml
housekeeper_tg_bot/: bot.py  config.py  gpt.py  media_content.py  messages.py  models.py  utils.py
