[tool.poetry]
name = "housekeeper-tg-bot"
version = "0.1.0"
description = ""
authors = ["Barahlush <baraltiva@gmail.com>"]
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.15.4"
pytelegrambotapi = "^4.9.0"
python-dotenv = "^0.21.1"
pickledb = "^0.9.2"
loguru = "^0.6.0"
types-requests = "^2.28.11.8"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
blue = "*"
mypy = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.blue]
line-length = 79

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["numpy.typing.mypy_plugin"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/housekeeper_tg_bot"

[tool.ruff]
line-length = 79
select = [
    "A",
    "ARG",
    "B",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["A003"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S"]
"messages.py" = ["E501"]
